--- a/Languages/ChineseSimplified/DefInjected/ShuffledNameDef/First_Male.xml
+++ b/Languages/ChineseSimplified/DefInjected/ShuffledNameDef/First_Male.xml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
+  <!-- NOTE: The names disallow duplicates in the same file. Total: 352. -->
+
   <First_Male_0.shuffledNames.0>霍华德</First_Male_0.shuffledNames.0>
   <First_Male_0.shuffledNames.1>哈维尔</First_Male_0.shuffledNames.1>
   <First_Male_0.shuffledNames.2>凯</First_Male_0.shuffledNames.2>
