--- a/Languages/ChineseSimplified/DefInjected/SolidNameDef/SolidNames.xml
+++ b/Languages/ChineseSimplified/DefInjected/SolidNameDef/SolidNames.xml
@@ -2655,7 +2655,7 @@
   <Male_Konrad_Fanekrogh_Konny.nick>康尼</Male_Konrad_Fanekrogh_Konny.nick>
 
   <Male_Aaron_Johnson_EMPTY.first>阿龙</Male_Aaron_Johnson_EMPTY.first>
-  <Male_Aaron_Johnson_EMPTY.last>约翰逊</Male_Aaron_Johnson_EMPTY.last>
+  <Male_Aaron_Johnson_EMPTY.last>约翰松</Male_Aaron_Johnson_EMPTY.last>
 
   <Male_Jered_Martin_Jay.first>杰尔德</Male_Jered_Martin_Jay.first>
   <Male_Jered_Martin_Jay.last>马丁</Male_Jered_Martin_Jay.last>
@@ -4216,7 +4216,7 @@
   <Male_Johnson_Hak_Kahlert.last>哈克</Male_Johnson_Hak_Kahlert.last>
   <Male_Johnson_Hak_Kahlert.nick>卡勒特</Male_Johnson_Hak_Kahlert.nick>
 
-  <Male_Wu_Peichih_Parker.first>伍</Male_Wu_Peichih_Parker.first>
+  <Male_Wu_Peichih_Parker.first>武</Male_Wu_Peichih_Parker.first>
   <Male_Wu_Peichih_Parker.last>佩奇</Male_Wu_Peichih_Parker.last>
   <Male_Wu_Peichih_Parker.nick>帕克</Male_Wu_Peichih_Parker.nick>
 
@@ -7728,7 +7728,7 @@
   <Male_Marcus_Schulte_Hazard.nick>阿扎尔</Male_Marcus_Schulte_Hazard.nick>
 
   <Male_Edward_Johnson_Ed.first>爱德华</Male_Edward_Johnson_Ed.first>
-  <Male_Edward_Johnson_Ed.last>约翰逊</Male_Edward_Johnson_Ed.last>
+  <Male_Edward_Johnson_Ed.last>约翰松</Male_Edward_Johnson_Ed.last>
   <Male_Edward_Johnson_Ed.nick>爱德</Male_Edward_Johnson_Ed.nick>
 
   <Male_Andrew_Grate_Toast.first>安德鲁</Male_Andrew_Grate_Toast.first>
@@ -9301,7 +9301,7 @@
   <Male_Zach_Phillips_Zach.nick>萨奇</Male_Zach_Phillips_Zach.nick>
 
   <Male_Brandon_McBride_EMPTY.first>布兰登</Male_Brandon_McBride_EMPTY.first>
-  <Male_Brandon_McBride_EMPTY.last>麦布赖德</Male_Brandon_McBride_EMPTY.last>
+  <Male_Brandon_McBride_EMPTY.last>麦克布赖德</Male_Brandon_McBride_EMPTY.last>
 
   <Male_Rufert_Lehman_Rufert.first>鲁费特</Male_Rufert_Lehman_Rufert.first>
   <Male_Rufert_Lehman_Rufert.last>莱曼</Male_Rufert_Lehman_Rufert.last>
@@ -9831,7 +9831,7 @@
   <Male_Fabien_Grelot_EMPTY.last>格勒洛</Male_Fabien_Grelot_EMPTY.last>
 
   <Male_Karl_Johnson_Chef.first>卡尔</Male_Karl_Johnson_Chef.first>
-  <Male_Karl_Johnson_Chef.last>约翰逊</Male_Karl_Johnson_Chef.last>
+  <Male_Karl_Johnson_Chef.last>约翰松</Male_Karl_Johnson_Chef.last>
   <Male_Karl_Johnson_Chef.nick>首领</Male_Karl_Johnson_Chef.nick>
 
   <Either_Yutte_Harlamek_EMPTY.first>尤特</Either_Yutte_Harlamek_EMPTY.first>
@@ -10911,7 +10911,7 @@
   <Male_Joakim_OdnesHansen_Jokk.last>奥德内斯汉森</Male_Joakim_OdnesHansen_Jokk.last>
   <Male_Joakim_OdnesHansen_Jokk.nick>约克</Male_Joakim_OdnesHansen_Jokk.nick>
 
-  <Male_Jiunwei_Chen_Rooks.first>俊文</Male_Jiunwei_Chen_Rooks.first>
+  <Male_Jiunwei_Chen_Rooks.first>俊维</Male_Jiunwei_Chen_Rooks.first>
   <Male_Jiunwei_Chen_Rooks.last>陈</Male_Jiunwei_Chen_Rooks.last>
   <Male_Jiunwei_Chen_Rooks.nick>乌鸦</Male_Jiunwei_Chen_Rooks.nick>
 
@@ -12233,7 +12233,7 @@
   <Male_Wilberforce_Goodwood_Woody.nick>伍迪</Male_Wilberforce_Goodwood_Woody.nick>
 
   <Male_Melvin_Johnson_Melvin.first>梅尔文</Male_Melvin_Johnson_Melvin.first>
-  <Male_Melvin_Johnson_Melvin.last>约翰逊</Male_Melvin_Johnson_Melvin.last>
+  <Male_Melvin_Johnson_Melvin.last>约翰松</Male_Melvin_Johnson_Melvin.last>
   <Male_Melvin_Johnson_Melvin.nick>梅尔文</Male_Melvin_Johnson_Melvin.nick>
 
   <Male_Charles_Wankat_Chuck.first>查理斯</Male_Charles_Wankat_Chuck.first>
@@ -13479,7 +13479,7 @@
   <Male_Daniel_Mann_Dankman.nick>阴湿人</Male_Daniel_Mann_Dankman.nick>
 
   <Male_Rejis_Johnson_EMPTY.first>瑞吉斯</Male_Rejis_Johnson_EMPTY.first>
-  <Male_Rejis_Johnson_EMPTY.last>约翰逊</Male_Rejis_Johnson_EMPTY.last>
+  <Male_Rejis_Johnson_EMPTY.last>约翰松</Male_Rejis_Johnson_EMPTY.last>
 
   <Male_Patrick_Hamilton_Hamil.first>帕特里克</Male_Patrick_Hamilton_Hamil.first>
   <Male_Patrick_Hamilton_Hamil.last>汉密尔顿</Male_Patrick_Hamilton_Hamil.last>
@@ -14770,7 +14770,7 @@
   <Male_Mark_Loring_EMPTY.last>洛林</Male_Mark_Loring_EMPTY.last>
 
   <Male_Dick_Johnson_Dick.first>迪克</Male_Dick_Johnson_Dick.first>
-  <Male_Dick_Johnson_Dick.last>约翰逊</Male_Dick_Johnson_Dick.last>
+  <Male_Dick_Johnson_Dick.last>约翰松</Male_Dick_Johnson_Dick.last>
   <Male_Dick_Johnson_Dick.nick>迪克</Male_Dick_Johnson_Dick.nick>
 
   <Female_Cathy_Ashford_Taffy.first>凯茜</Female_Cathy_Ashford_Taffy.first>
