--- a/Languages/ChineseSimplified/DefInjected/ShuffledNameDef/First_Male.xml
+++ b/Languages/ChineseSimplified/DefInjected/ShuffledNameDef/First_Male.xml
@@ -216,7 +216,7 @@
   <First_Male_2.shuffledNames.24>伊卡博德</First_Male_2.shuffledNames.24>
   <First_Male_2.shuffledNames.25>拉滕</First_Male_2.shuffledNames.25>
   <First_Male_2.shuffledNames.26>克林克</First_Male_2.shuffledNames.26>
-  <First_Male_2.shuffledNames.27>麦克弗莱</First_Male_2.shuffledNames.27>
+  <First_Male_2.shuffledNames.27>麦弗莱</First_Male_2.shuffledNames.27>
   <First_Male_2.shuffledNames.28>莱奥</First_Male_2.shuffledNames.28>
   <First_Male_2.shuffledNames.29>西拉德</First_Male_2.shuffledNames.29>
   <First_Male_2.shuffledNames.30>阿尔伯特</First_Male_2.shuffledNames.30>
