--- a/Languages/ChineseSimplified/DefInjected/ShuffledNameDef/Last.xml
+++ b/Languages/ChineseSimplified/DefInjected/ShuffledNameDef/Last.xml
@@ -592,7 +592,7 @@
   <Last_1.shuffledNames.564>梅纳德</Last_1.shuffledNames.564>
   <Last_1.shuffledNames.565>马约</Last_1.shuffledNames.565>
   <Last_1.shuffledNames.566>梅斯</Last_1.shuffledNames.566>
-  <Last_1.shuffledNames.567>麦克布赖德</Last_1.shuffledNames.567>
+  <Last_1.shuffledNames.567>麦布赖德</Last_1.shuffledNames.567>
   <Last_1.shuffledNames.568>麦考尔</Last_1.shuffledNames.568>
   <Last_1.shuffledNames.569>麦堪</Last_1.shuffledNames.569>
   <Last_1.shuffledNames.570>麦卡锡</Last_1.shuffledNames.570>
@@ -602,9 +602,9 @@
   <Last_1.shuffledNames.574>麦康奈尔</Last_1.shuffledNames.574>
   <Last_1.shuffledNames.575>麦考密克</Last_1.shuffledNames.575>
   <Last_1.shuffledNames.576>麦科伊</Last_1.shuffledNames.576>
-  <Last_1.shuffledNames.577>麦克丹尼尔</Last_1.shuffledNames.577>
-  <Last_1.shuffledNames.578>麦克唐纳</Last_1.shuffledNames.578>
-  <Last_1.shuffledNames.579>麦克道尔</Last_1.shuffledNames.579>
+  <Last_1.shuffledNames.577>麦丹尼尔</Last_1.shuffledNames.577>
+  <Last_1.shuffledNames.578>麦唐纳</Last_1.shuffledNames.578>
+  <Last_1.shuffledNames.579>麦道尔</Last_1.shuffledNames.579>
   <Last_1.shuffledNames.580>麦克法兰</Last_1.shuffledNames.580>
   <Last_1.shuffledNames.581>麦吉</Last_1.shuffledNames.581>
   <Last_1.shuffledNames.582>麦格拉思</Last_1.shuffledNames.582>
@@ -992,7 +992,7 @@
   <Last_1.shuffledNames.964>耶茨</Last_1.shuffledNames.964>
   <Last_1.shuffledNames.965>约德</Last_1.shuffledNames.965>
   <Last_1.shuffledNames.966>约克</Last_1.shuffledNames.966>
-  <Last_1.shuffledNames.967>余</Last_1.shuffledNames.967>
+  <Last_1.shuffledNames.967>扬</Last_1.shuffledNames.967>
   <Last_1.shuffledNames.968>友</Last_1.shuffledNames.968>
   <Last_1.shuffledNames.969>萨莫拉</Last_1.shuffledNames.969>
   <Last_1.shuffledNames.970>扎瓦拉</Last_1.shuffledNames.970>
