--- a/Languages/ChineseSimplified/DefInjected/SolidNameDef/SolidNames.xml
+++ b/Languages/ChineseSimplified/DefInjected/SolidNameDef/SolidNames.xml
@@ -9301,7 +9301,7 @@
   <Male_Zach_Phillips_Zach.nick>萨奇</Male_Zach_Phillips_Zach.nick>
 
   <Male_Brandon_McBride_EMPTY.first>布兰登</Male_Brandon_McBride_EMPTY.first>
-  <Male_Brandon_McBride_EMPTY.last>麦克布赖德</Male_Brandon_McBride_EMPTY.last>
+  <Male_Brandon_McBride_EMPTY.last>麦布赖德</Male_Brandon_McBride_EMPTY.last>
 
   <Male_Rufert_Lehman_Rufert.first>鲁费特</Male_Rufert_Lehman_Rufert.first>
   <Male_Rufert_Lehman_Rufert.last>莱曼</Male_Rufert_Lehman_Rufert.last>
