Proofread and fixed

--- a/Languages/ChineseSimplified/DefInjected/SolidNameDef/SolidNames.xml
+++ b/Languages/ChineseSimplified/DefInjected/SolidNameDef/SolidNames.xml
@@ -2306,7 +2306,7 @@
   <Male_Luro_Hilaire_Luro.nick>鲁洛</Male_Luro_Hilaire_Luro.nick>
 
   <Male_Marshal_VanBlack_EMPTY.first>马歇尔</Male_Marshal_VanBlack_EMPTY.first>
-  <Male_Marshal_VanBlack_EMPTY.last>冯 布莱克</Male_Marshal_VanBlack_EMPTY.last>
+  <Male_Marshal_VanBlack_EMPTY.last>冯布莱克</Male_Marshal_VanBlack_EMPTY.last>
 
   <Male_Klaus_Austerlitz_Rulant.first>克劳斯</Male_Klaus_Austerlitz_Rulant.first>
   <Male_Klaus_Austerlitz_Rulant.last>奥斯特利茨</Male_Klaus_Austerlitz_Rulant.last>
@@ -2441,7 +2441,7 @@
   <Male_Brendan_Reilly_Egg.nick>蛋蛋</Male_Brendan_Reilly_Egg.nick>
 
   <Male_Mazeo_ArKorrigan_Arko.first>马吉欧</Male_Mazeo_ArKorrigan_Arko.first>
-  <Male_Mazeo_ArKorrigan_Arko.last>阿尔 卡瑞根</Male_Mazeo_ArKorrigan_Arko.last>
+  <Male_Mazeo_ArKorrigan_Arko.last>阿尔卡瑞根</Male_Mazeo_ArKorrigan_Arko.last>
   <Male_Mazeo_ArKorrigan_Arko.nick>阿克</Male_Mazeo_ArKorrigan_Arko.nick>
 
   <Male_Christopher_Lorr_Lorr.first>克里斯托弗</Male_Christopher_Lorr_Lorr.first>
@@ -2544,7 +2544,7 @@
   <Male_Terje_Samuelsen_Doogie.nick>杜奇</Male_Terje_Samuelsen_Doogie.nick>
 
   <Male_Alaster_DeMare_Alaster.first>阿勒斯特</Male_Alaster_DeMare_Alaster.first>
-  <Male_Alaster_DeMare_Alaster.last>德 梅尔</Male_Alaster_DeMare_Alaster.last>
+  <Male_Alaster_DeMare_Alaster.last>德梅尔</Male_Alaster_DeMare_Alaster.last>
   <Male_Alaster_DeMare_Alaster.nick>阿勒斯特</Male_Alaster_DeMare_Alaster.nick>
 
   <Male_William_Valley_Shifty.first>威廉</Male_William_Valley_Shifty.first>
@@ -2668,7 +2668,7 @@
   <Male_Dana_Thibodeau_EMPTY.last>锡伯杜</Male_Dana_Thibodeau_EMPTY.last>
 
   <Male_Resok_DMoren_EMPTY.first>瑞萨</Male_Resok_DMoren_EMPTY.first>
-  <Male_Resok_DMoren_EMPTY.last>德 莫伦</Male_Resok_DMoren_EMPTY.last>
+  <Male_Resok_DMoren_EMPTY.last>德莫伦</Male_Resok_DMoren_EMPTY.last>
 
   <Male_Nils_Hardin_EMPTY.first>尼尔斯</Male_Nils_Hardin_EMPTY.first>
   <Male_Nils_Hardin_EMPTY.last>哈丁</Male_Nils_Hardin_EMPTY.last>
@@ -2735,7 +2735,7 @@
   <Male_Corlon_Friedsburg_Spoony.nick>斯波尼</Male_Corlon_Friedsburg_Spoony.nick>
 
   <Male_Chadwick_OHagan_EMPTY.first>查德威克</Male_Chadwick_OHagan_EMPTY.first>
-  <Male_Chadwick_OHagan_EMPTY.last>范 海根</Male_Chadwick_OHagan_EMPTY.last>
+  <Male_Chadwick_OHagan_EMPTY.last>奥海根</Male_Chadwick_OHagan_EMPTY.last>
 
   <Male_Maxwell_Boyd_Max.first>马克斯韦尔</Male_Maxwell_Boyd_Max.first>
   <Male_Maxwell_Boyd_Max.last>博伊德</Male_Maxwell_Boyd_Max.last>
@@ -3055,7 +3055,7 @@
   <Male_Matthew_Boyer_Matt.nick>马特</Male_Matthew_Boyer_Matt.nick>
 
   <Male_Aric_vanSelous_EMPTY.first>阿瑞克</Male_Aric_vanSelous_EMPTY.first>
-  <Male_Aric_vanSelous_EMPTY.last>冯 塞卢斯</Male_Aric_vanSelous_EMPTY.last>
+  <Male_Aric_vanSelous_EMPTY.last>冯塞卢斯</Male_Aric_vanSelous_EMPTY.last>
 
   <Male_Ulysses_Gonzalez_Uly.first>尤利西斯</Male_Ulysses_Gonzalez_Uly.first>
   <Male_Ulysses_Gonzalez_Uly.last>冈萨雷斯</Male_Ulysses_Gonzalez_Uly.last>
@@ -3153,7 +3153,7 @@
   <Male_Reon_Viljoen_Pentog.nick>潘托格</Male_Reon_Viljoen_Pentog.nick>
 
   <Male_Sprocket_VonNapier_Sprox.first>斯波特克</Male_Sprocket_VonNapier_Sprox.first>
-  <Male_Sprocket_VonNapier_Sprox.last>冯 纳皮尔</Male_Sprocket_VonNapier_Sprox.last>
+  <Male_Sprocket_VonNapier_Sprox.last>冯纳皮尔</Male_Sprocket_VonNapier_Sprox.last>
   <Male_Sprocket_VonNapier_Sprox.nick>斯波克斯</Male_Sprocket_VonNapier_Sprox.nick>
 
   <Male_Alan_Reade_Alphonse.first>阿兰</Male_Alan_Reade_Alphonse.first>
@@ -3252,7 +3252,7 @@
   <Male_Deacon_Ix_Deac.nick>迪克</Male_Deacon_Ix_Deac.nick>
 
   <Male_Aleksi_Rönkkö_Lungfish.first>阿列克西</Male_Aleksi_Rönkkö_Lungfish.first>
-  <Male_Aleksi_Rönkkö_Lungfish.last>Rönkkö</Male_Aleksi_Rönkkö_Lungfish.last>
+  <Male_Aleksi_Rönkkö_Lungfish.last>棱戈</Male_Aleksi_Rönkkö_Lungfish.last>
   <Male_Aleksi_Rönkkö_Lungfish.nick>肺鱼</Male_Aleksi_Rönkkö_Lungfish.nick>
 
   <Male_Travis_Torgerson_T-Bone.first>特拉维斯</Male_Travis_Torgerson_T-Bone.first>
@@ -3371,8 +3371,8 @@
   <Female_Catherine_Lavoie_Cat.last>拉沃伊</Female_Catherine_Lavoie_Cat.last>
   <Female_Catherine_Lavoie_Cat.nick>猫</Female_Catherine_Lavoie_Cat.nick>
 
-  <Male_WanZulfikri_WanYusoff_Wan.first>冯 菲克力</Male_WanZulfikri_WanYusoff_Wan.first>
-  <Male_WanZulfikri_WanYusoff_Wan.last>冯 优素福</Male_WanZulfikri_WanYusoff_Wan.last>
+  <Male_WanZulfikri_WanYusoff_Wan.first>冯菲克力</Male_WanZulfikri_WanYusoff_Wan.first>
+  <Male_WanZulfikri_WanYusoff_Wan.last>冯优素福</Male_WanZulfikri_WanYusoff_Wan.last>
   <Male_WanZulfikri_WanYusoff_Wan.nick>冯</Male_WanZulfikri_WanYusoff_Wan.nick>
 
   <Male_Nahku_Kerman_EMPTY.first>纳哈</Male_Nahku_Kerman_EMPTY.first>
@@ -3493,7 +3493,7 @@
   <Male_Charlie_Jackson_CJ.nick>CJ</Male_Charlie_Jackson_CJ.nick>
 
   <Either_Agerra_Trel_EMPTY.first>阿格瑞亚</Either_Agerra_Trel_EMPTY.first>
-  <Either_Agerra_Trel_EMPTY.last>T'瑞尔</Either_Agerra_Trel_EMPTY.last>
+  <Either_Agerra_Trel_EMPTY.last>特瑞尔</Either_Agerra_Trel_EMPTY.last>
 
   <Male_Mairekk_Griffiths_EMPTY.first>马瑞科</Male_Mairekk_Griffiths_EMPTY.first>
   <Male_Mairekk_Griffiths_EMPTY.last>格里菲思</Male_Mairekk_Griffiths_EMPTY.last>
@@ -4059,7 +4059,7 @@
   <Male_Logan_Lambert_Lambert.nick>兰伯特</Male_Logan_Lambert_Lambert.nick>
 
   <Male_Egbert_deBoer_Bertus.first>埃格伯特</Male_Egbert_deBoer_Bertus.first>
-  <Male_Egbert_deBoer_Bertus.last>德 波尔</Male_Egbert_deBoer_Bertus.last>
+  <Male_Egbert_deBoer_Bertus.last>德波尔</Male_Egbert_deBoer_Bertus.last>
   <Male_Egbert_deBoer_Bertus.nick>拜尔图什</Male_Egbert_deBoer_Bertus.nick>
 
   <Male_Christian_Dreyer_Chris.first>克里斯蒂安</Male_Christian_Dreyer_Chris.first>
@@ -4183,7 +4183,7 @@
   <Male_Dmitrius_Orelius_Dmitri.nick>德米特里</Male_Dmitrius_Orelius_Dmitri.nick>
 
   <Male_Horstmann_vonWutzing_Hinkel.first>霍斯特曼</Male_Horstmann_vonWutzing_Hinkel.first>
-  <Male_Horstmann_vonWutzing_Hinkel.last>冯 武青</Male_Horstmann_vonWutzing_Hinkel.last>
+  <Male_Horstmann_vonWutzing_Hinkel.last>冯武青</Male_Horstmann_vonWutzing_Hinkel.last>
   <Male_Horstmann_vonWutzing_Hinkel.nick>欣克尔</Male_Horstmann_vonWutzing_Hinkel.nick>
 
   <Male_Iain_Wolfington_Wolfen.first>伊恩</Male_Iain_Wolfington_Wolfen.first>
@@ -4459,7 +4459,7 @@
   <Male_Conor_White_EMPTY.first>康纳</Male_Conor_White_EMPTY.first>
   <Male_Conor_White_EMPTY.last>怀特</Male_Conor_White_EMPTY.last>
 
-  <Male_JulianEric_White_Jules.first>朱利安 埃里克</Male_JulianEric_White_Jules.first>
+  <Male_JulianEric_White_Jules.first>朱利安-埃里克</Male_JulianEric_White_Jules.first>
   <Male_JulianEric_White_Jules.last>怀特</Male_JulianEric_White_Jules.last>
   <Male_JulianEric_White_Jules.nick>朱尔</Male_JulianEric_White_Jules.nick>
 
@@ -4789,7 +4789,7 @@
   <Male_Trew_Nahorn_EMPTY.last>纳霍尔</Male_Trew_Nahorn_EMPTY.last>
 
   <Male_Ahmed_ElGendy_EMPTY.first>艾哈迈德</Male_Ahmed_ElGendy_EMPTY.first>
-  <Male_Ahmed_ElGendy_EMPTY.last>艾尔 珍迪</Male_Ahmed_ElGendy_EMPTY.last>
+  <Male_Ahmed_ElGendy_EMPTY.last>艾尔珍迪</Male_Ahmed_ElGendy_EMPTY.last>
 
   <Male_Shaoyu_Wang_EMPTY.first>绍雨</Male_Shaoyu_Wang_EMPTY.first>
   <Male_Shaoyu_Wang_EMPTY.last>王</Male_Shaoyu_Wang_EMPTY.last>
@@ -4873,7 +4873,7 @@
 
   <Male_Samuel_Blantz_Pi.first>塞缪尔</Male_Samuel_Blantz_Pi.first>
   <Male_Samuel_Blantz_Pi.last>布兰兹</Male_Samuel_Blantz_Pi.last>
-  <Male_Samuel_Blantz_Pi.nick>Pi</Male_Samuel_Blantz_Pi.nick>
+  <Male_Samuel_Blantz_Pi.nick>圆周率</Male_Samuel_Blantz_Pi.nick>
 
   <Female_Rosa_Sawyer_EMPTY.first>罗莎</Female_Rosa_Sawyer_EMPTY.first>
   <Female_Rosa_Sawyer_EMPTY.last>索耶</Female_Rosa_Sawyer_EMPTY.last>
@@ -5204,7 +5204,7 @@
   <Male_Bovaiveu_Vogelvaag_Bov.nick>博夫</Male_Bovaiveu_Vogelvaag_Bov.nick>
 
   <Female_Tewi_VonDoom_EMPTY.first>忒薇</Female_Tewi_VonDoom_EMPTY.first>
-  <Female_Tewi_VonDoom_EMPTY.last>冯 杜姆</Female_Tewi_VonDoom_EMPTY.last>
+  <Female_Tewi_VonDoom_EMPTY.last>冯杜姆</Female_Tewi_VonDoom_EMPTY.last>
 
   <Male_Barry_Carlyon_Bazza.first>巴里</Male_Barry_Carlyon_Bazza.first>
   <Male_Barry_Carlyon_Bazza.last>卡里恩</Male_Barry_Carlyon_Bazza.last>
@@ -5298,7 +5298,7 @@
 
   <Male_Jani_Martikainen_Jii.first>贾尼</Male_Jani_Martikainen_Jii.first>
   <Male_Jani_Martikainen_Jii.last>马蒂凯宁</Male_Jani_Martikainen_Jii.last>
-  <Male_Jani_Martikainen_Jii.nick>Jii</Male_Jani_Martikainen_Jii.nick>
+  <Male_Jani_Martikainen_Jii.nick>集</Male_Jani_Martikainen_Jii.nick>
 
   <Male_Dimitri_Rastovskia_Dima.first>季米特里</Male_Dimitri_Rastovskia_Dima.first>
   <Male_Dimitri_Rastovskia_Dima.last>拉斯托夫斯基亚</Male_Dimitri_Rastovskia_Dima.last>
@@ -5432,7 +5432,7 @@
 
   <Male_Ekybob_Sirron_Ek.first>埃基鲍勃</Male_Ekybob_Sirron_Ek.first>
   <Male_Ekybob_Sirron_Ek.last>希隆</Male_Ekybob_Sirron_Ek.last>
-  <Male_Ekybob_Sirron_Ek.nick>Ek</Male_Ekybob_Sirron_Ek.nick>
+  <Male_Ekybob_Sirron_Ek.nick>埃克</Male_Ekybob_Sirron_Ek.nick>
 
   <Male_Joseph_Johnston_Josee.first>约瑟夫</Male_Joseph_Johnston_Josee.first>
   <Male_Joseph_Johnston_Josee.last>约翰斯顿</Male_Joseph_Johnston_Josee.last>
@@ -6242,7 +6242,7 @@
 
   <Male_Timothy_Cook_Cookie.first>蒂莫西</Male_Timothy_Cook_Cookie.first>
   <Male_Timothy_Cook_Cookie.last>库克</Male_Timothy_Cook_Cookie.last>
-  <Male_Timothy_Cook_Cookie.nick>☆曲奇☆</Male_Timothy_Cook_Cookie.nick>
+  <Male_Timothy_Cook_Cookie.nick>曲奇</Male_Timothy_Cook_Cookie.nick>
 
   <Male_Zeyos_Lave_Zey.first>泽约斯</Male_Zeyos_Lave_Zey.first>
   <Male_Zeyos_Lave_Zey.last>拉芙</Male_Zeyos_Lave_Zey.last>
@@ -6379,9 +6379,9 @@
   <Male_Failaria_Talerum_Faye.last>塔利鲁姆</Male_Failaria_Talerum_Faye.last>
   <Male_Failaria_Talerum_Faye.nick>法耶</Male_Failaria_Talerum_Faye.nick>
 
-  <Male_Toni_Karppinen_Toni.first>托尼;托妮(女名)</Male_Toni_Karppinen_Toni.first>
+  <Male_Toni_Karppinen_Toni.first>托尼</Male_Toni_Karppinen_Toni.first>
   <Male_Toni_Karppinen_Toni.last>卡尔皮宁</Male_Toni_Karppinen_Toni.last>
-  <Male_Toni_Karppinen_Toni.nick>托尼;托妮(女名)</Male_Toni_Karppinen_Toni.nick>
+  <Male_Toni_Karppinen_Toni.nick>托尼</Male_Toni_Karppinen_Toni.nick>
 
   <Female_Emily_Seidel_Melee.first>艾蜜莉</Female_Emily_Seidel_Melee.first>
   <Female_Emily_Seidel_Melee.last>赛德尔</Female_Emily_Seidel_Melee.last>
@@ -7363,13 +7363,13 @@
 
   <Female_Fujiko_Himeoka_Foozie.first>藤子</Female_Fujiko_Himeoka_Foozie.first>
   <Female_Fujiko_Himeoka_Foozie.last>氷見岡</Female_Fujiko_Himeoka_Foozie.last>
-  <Female_Fujiko_Himeoka_Foozie.nick>FOO子</Female_Fujiko_Himeoka_Foozie.nick>
+  <Female_Fujiko_Himeoka_Foozie.nick>芙子</Female_Fujiko_Himeoka_Foozie.nick>
 
   <Male_Aaron_Golab_EMPTY.first>阿龙</Male_Aaron_Golab_EMPTY.first>
   <Male_Aaron_Golab_EMPTY.last>戈拉布</Male_Aaron_Golab_EMPTY.last>
 
   <Female_Mariana_CdaSilva_Miana.first>玛丽安娜</Female_Mariana_CdaSilva_Miana.first>
-  <Female_Mariana_CdaSilva_Miana.last>C.达.希瓦</Female_Mariana_CdaSilva_Miana.last>
+  <Female_Mariana_CdaSilva_Miana.last>达希瓦</Female_Mariana_CdaSilva_Miana.last>
   <Female_Mariana_CdaSilva_Miana.nick>米亚纳</Female_Mariana_CdaSilva_Miana.nick>
 
   <Male_John_Gruenfelder_EMPTY.first>约翰</Male_John_Gruenfelder_EMPTY.first>
@@ -7596,7 +7596,7 @@
   <Male_Brathahn_Axmann_EMPTY.last>阿克斯曼</Male_Brathahn_Axmann_EMPTY.last>
 
   <Male_Einachten_vanHase_Eina.first>尹纳齐藤</Male_Einachten_vanHase_Eina.first>
-  <Male_Einachten_vanHase_Eina.last>范 哈泽</Male_Einachten_vanHase_Eina.last>
+  <Male_Einachten_vanHase_Eina.last>范哈泽</Male_Einachten_vanHase_Eina.last>
   <Male_Einachten_vanHase_Eina.nick>尹纳</Male_Einachten_vanHase_Eina.nick>
 
   <Male_Wilson_Chu_Lortex.first>威尔逊</Male_Wilson_Chu_Lortex.first>
@@ -7756,7 +7756,7 @@
 
   <Male_Sigurd_Klastrup_SigSig.first>西格德</Male_Sigurd_Klastrup_SigSig.first>
   <Male_Sigurd_Klastrup_SigSig.last>克拉斯特拉普</Male_Sigurd_Klastrup_SigSig.last>
-  <Male_Sigurd_Klastrup_SigSig.nick>西格 西格</Male_Sigurd_Klastrup_SigSig.nick>
+  <Male_Sigurd_Klastrup_SigSig.nick>西西</Male_Sigurd_Klastrup_SigSig.nick>
 
   <Female_Hope_Hendriksen_Fox.first>霍普</Female_Hope_Hendriksen_Fox.first>
   <Female_Hope_Hendriksen_Fox.last>亨德里克森</Female_Hope_Hendriksen_Fox.last>
@@ -8042,7 +8042,7 @@
   <Male_Fabian_Frickenstein_Fab.nick>法布</Male_Fabian_Frickenstein_Fab.nick>
 
   <Male_WillIam_DeSota_Bozz.first>威廉姆</Male_WillIam_DeSota_Bozz.first>
-  <Male_WillIam_DeSota_Bozz.last>德 索塔</Male_WillIam_DeSota_Bozz.last>
+  <Male_WillIam_DeSota_Bozz.last>德索塔</Male_WillIam_DeSota_Bozz.last>
   <Male_WillIam_DeSota_Bozz.nick>嗡嗡</Male_WillIam_DeSota_Bozz.nick>
 
   <Male_Cletus_Romansky_Guignol.first>克莱图斯</Male_Cletus_Romansky_Guignol.first>
@@ -8325,7 +8325,7 @@
   <Male_Philippe_Roy_EMPTY.last>罗伊</Male_Philippe_Roy_EMPTY.last>
 
   <Male_Elrithil_ElNadir_Elri.first>艾尔里希尔</Male_Elrithil_ElNadir_Elri.first>
-  <Male_Elrithil_ElNadir_Elri.last>艾尔 纳迪尔</Male_Elrithil_ElNadir_Elri.last>
+  <Male_Elrithil_ElNadir_Elri.last>艾尔纳迪尔</Male_Elrithil_ElNadir_Elri.last>
   <Male_Elrithil_ElNadir_Elri.nick>艾尔里</Male_Elrithil_ElNadir_Elri.nick>
 
   <Male_Josh_Rogers_EMPTY.first>乔希</Male_Josh_Rogers_EMPTY.first>
@@ -8419,7 +8419,7 @@
   <Male_Jeremy_White_EMPTY.last>怀特</Male_Jeremy_White_EMPTY.last>
 
   <Male_Ezequiel_DeArriba_Zeze.first>埃斯奎雷尔</Male_Ezequiel_DeArriba_Zeze.first>
-  <Male_Ezequiel_DeArriba_Zeze.last>德 阿里巴</Male_Ezequiel_DeArriba_Zeze.last>
+  <Male_Ezequiel_DeArriba_Zeze.last>德阿里巴</Male_Ezequiel_DeArriba_Zeze.last>
   <Male_Ezequiel_DeArriba_Zeze.nick>泽泽</Male_Ezequiel_DeArriba_Zeze.nick>
 
   <Male_Greyson_Fenn_Grey.first>格雷森</Male_Greyson_Fenn_Grey.first>
@@ -8520,7 +8520,7 @@
   <Male_Raymond_Perry_Truth.nick>真理</Male_Raymond_Perry_Truth.nick>
 
   <Male_Svennson_VanWebingen_Webster.first>斯文森</Male_Svennson_VanWebingen_Webster.first>
-  <Male_Svennson_VanWebingen_Webster.last>范 维宾根</Male_Svennson_VanWebingen_Webster.last>
+  <Male_Svennson_VanWebingen_Webster.last>范维宾根</Male_Svennson_VanWebingen_Webster.last>
   <Male_Svennson_VanWebingen_Webster.nick>韦伯斯特</Male_Svennson_VanWebingen_Webster.nick>
 
   <Male_Alex_Sidoroff_EMPTY.first>亚历克斯</Male_Alex_Sidoroff_EMPTY.first>
@@ -8866,7 +8866,7 @@
   <Male_Michael_Noel_Micka.nick>米茨卡</Male_Michael_Noel_Micka.nick>
 
   <Male_Rolf_CaesarTorp_EMPTY.first>罗尔夫</Male_Rolf_CaesarTorp_EMPTY.first>
-  <Male_Rolf_CaesarTorp_EMPTY.last>凯撒 拓尔普</Male_Rolf_CaesarTorp_EMPTY.last>
+  <Male_Rolf_CaesarTorp_EMPTY.last>凯撒-拓尔普</Male_Rolf_CaesarTorp_EMPTY.last>
 
   <Male_Wouter_Theys_Wouter.first>沃特</Male_Wouter_Theys_Wouter.first>
   <Male_Wouter_Theys_Wouter.last>泰斯</Male_Wouter_Theys_Wouter.last>
@@ -9017,7 +9017,7 @@
   <Male_Bradley_Smit_Wiggins.nick>威金斯</Male_Bradley_Smit_Wiggins.nick>
 
   <Male_Burt_duPreez_EMPTY.first>伯特</Male_Burt_duPreez_EMPTY.first>
-  <Male_Burt_duPreez_EMPTY.last>杜 普里兹</Male_Burt_duPreez_EMPTY.last>
+  <Male_Burt_duPreez_EMPTY.last>杜普里兹</Male_Burt_duPreez_EMPTY.last>
 
   <Male_Mauro_Amado_EMPTY.first>莫罗</Male_Mauro_Amado_EMPTY.first>
   <Male_Mauro_Amado_EMPTY.last>阿马多</Male_Mauro_Amado_EMPTY.last>
@@ -9173,7 +9173,7 @@
   <Male_Dominik_Lange_EMPTY.last>朗厄</Male_Dominik_Lange_EMPTY.last>
 
   <Male_Hugues_deVuyst_UG.first>乌格斯</Male_Hugues_deVuyst_UG.first>
-  <Male_Hugues_deVuyst_UG.last>德 乌斯特</Male_Hugues_deVuyst_UG.last>
+  <Male_Hugues_deVuyst_UG.last>德乌斯特</Male_Hugues_deVuyst_UG.last>
   <Male_Hugues_deVuyst_UG.nick>UG</Male_Hugues_deVuyst_UG.nick>
 
   <Male_Jared_Peterson_EMPTY.first>亚雷德</Male_Jared_Peterson_EMPTY.first>
@@ -10160,7 +10160,7 @@
   <Either_Vegica_McConvaag_EMPTY.first>维吉卡</Either_Vegica_McConvaag_EMPTY.first>
   <Either_Vegica_McConvaag_EMPTY.last>麦克康瓦格</Either_Vegica_McConvaag_EMPTY.last>
 
-  <Male_Toni_Kurt_EMPTY.first>托尼;托妮(女名)</Male_Toni_Kurt_EMPTY.first>
+  <Male_Toni_Kurt_EMPTY.first>托尼</Male_Toni_Kurt_EMPTY.first>
   <Male_Toni_Kurt_EMPTY.last>库尔特</Male_Toni_Kurt_EMPTY.last>
 
   <Female_John_Smith_Rambo.first>约翰</Female_John_Smith_Rambo.first>
@@ -13527,7 +13527,7 @@
 
   <Male_Alex_Copperfield_Al.first>亚历克斯</Male_Alex_Copperfield_Al.first>
   <Male_Alex_Copperfield_Al.last>科珀菲尔德</Male_Alex_Copperfield_Al.last>
-  <Male_Alex_Copperfield_Al.nick>Al</Male_Alex_Copperfield_Al.nick>
+  <Male_Alex_Copperfield_Al.nick>亚尔</Male_Alex_Copperfield_Al.nick>
 
   <Male_Drew_Sinclair_EMPTY.first>德鲁</Male_Drew_Sinclair_EMPTY.first>
   <Male_Drew_Sinclair_EMPTY.last>辛克莱</Male_Drew_Sinclair_EMPTY.last>
@@ -15489,7 +15489,7 @@
 
   <Male_Marius_Krueger_Ma.first>马里于斯</Male_Marius_Krueger_Ma.first>
   <Male_Marius_Krueger_Ma.last>克鲁格</Male_Marius_Krueger_Ma.last>
-  <Male_Marius_Krueger_Ma.nick>Ma</Male_Marius_Krueger_Ma.nick>
+  <Male_Marius_Krueger_Ma.nick>马</Male_Marius_Krueger_Ma.nick>
 
   <Male_Nathaniel_Wolf_Nathan.first>纳撒尼尔</Male_Nathaniel_Wolf_Nathan.first>
   <Male_Nathaniel_Wolf_Nathan.last>沃尔夫</Male_Nathaniel_Wolf_Nathan.last>
